# Helpdesk-BE

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docker/api/: Dockerfile
src/helpdesk_be/core/: database.py
src/helpdesk_be/migrations/: env.py
src/helpdesk_be/models/db/: base.py
