[project]
name = "helpdesk_be"
version = "0.1.0"
description = ""
authors = [
    {name = "nana-ichimaru",email = "nana.ichimaru@novel.jpn.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all] (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "helpdesk_be", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]
